# pos-t

./: .gitignore  CHECK_ENVIRONMENT_README.md  DEVELOPER_SETUP.md  FRONTEND_CODING_STANDARDS.md  QUICK_REFERENCE.md  README.md  cash-management-design.md  check-environment.sh  create_icons.py  detailed-development-plan.md  mockups-receipt-report.md  package-lock.json  package.json  src-ta  tailwind.config.js  vite.config.js
src/: App.css  App.jsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: database.rs  main.rs  main.rs.backup
src/components/: InventoryManager.css  InventoryManager.jsx  POSInterface.css  POSInterface.jsx  PaymentModal.jsx  TransactionHistory.css  TransactionHistory.jsx
src/components/auth/: Login.css  Login.jsx  UserManagement.css  UserManagement.jsx
src/components/cash/: ShiftDashboard.css  ShiftDashboard.jsx  ShiftReports.jsx
src/contexts/: AuthContext.jsx
